@@ -1475,3 +1475,6 @@ Added -R rendering option for pure Monte Carlo sampling.
 (Got rid of -DMC compile option, whicht his makes superfluous.)
 
 Changed -t option of rlam to accept strings as well as single characters.
+
+Fixed bug in rcalc with -l option where it would sometimes go into an
+infinite loop.
